config/manager/manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: infrastructure-operator
  name: assisted-installer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infrastructure-operator
  namespace: assisted-installer
  labels:
    control-plane: infrastructure-operator
spec:
  selector:
    matchLabels:
      control-plane: infrastructure-operator
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: infrastructure-operator
    spec:
      containers:
      - command:
        - /assisted-service-operator
        args:
        - --leader-elect
        image: quay.io/edge-infrastructure/assisted-service:ocm-2.17
        name: manager
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
      serviceAccountName: assisted-service
      terminationGracePeriodSeconds: 10
